formatting fixes for fontsizes and spacing

--- a/styles/css/experience.css
+++ b/styles/css/experience.css
@@ -121,7 +121,7 @@ table tr {
   margin-left: auto;
   margin-right: auto;
   text-align: center;
-  font-size: 80%;
+  font-size: 0.8em;
   margin: 0 auto;
   max-width: 1100px;
   padding: 5px;
@@ -139,9 +139,10 @@ table tr {
   border-radius: 5px;
   text-align: center;
   font-family: "Times New Roman", serif;
-  font-size: 14px;
+  font-size: 1em;
   font-style: italic;
-  letter-spacing: 0.08rem;
+  letter-spacing: 0.06em;
+  line-height: 1.8em;
   color: rgb(240, 248, 255);
 }
 
@@ -168,10 +169,9 @@ blockquote:before {
 blockquote p {
   font-family: "Times New Roman", serif;
   font-style: italic;
-  font-size: 22px;
-  font-size: 1.4rem;
-  letter-spacing: 0.1rem;
-  line-height: 60px;
+  font-size: 1.1em;
+  letter-spacing: 0.07em;
+  line-height: 2.7em;
   display: inline;
   width: 100%;
   background-position: 0 -1000px;
