--- a/styles/scss/_global.scss
+++ b/styles/scss/_global.scss
@@ -145,7 +145,7 @@ table {
 .copyright {
     @include center;
     text-align: center;
-    font-size: 80%;
+    font-size: 0.8em;
     margin: 0 auto;
     max-width: 1100px;
     padding: 5px;
